# lifeflow

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
.cursor/rules/: git-branches.mdc
alembic/: env.py
alembic/versions/: c0954ea3baf9_init.py
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4f6a7b0c1d2e_drop_done_from_cards.py  8e2a1c4b9d7f_rename_card_content_to_text.py  9786d5759afb_add_done_to_card_and_nullable_owner_id.py  b21f8d3e9a0c_add_auth_sessions.py  d7c3b2a190fe_add_cards_due_at.py
backend/src/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/src/api/: auth.py  board.py  deps.py  exception_handlers.py
backend/src/crud/: auth.py  board.py  user.py
backend/src/models/: __init__.py  auth_session.py  board.py  board_column.py  card.py  user.py
backend/src/routers/: auth.py  board.py  boards.py
backend/src/schemas/: auth.py  board.py  user.py
backend/src/utils/: security.py
backend/tests/: test_auth_api.py  test_security.py
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: auth.ts  boards.ts  client.ts
frontend/src/components/: AuthPanel.tsx  Board.tsx  Card.tsx  Column.tsx  Footer.tsx  GoalFormModal.tsx  Header.tsx
frontend/src/hooks/: useAuth.ts  useBoard.ts
frontend/src/styles/: app.css  fonts.css  index.css  theme.css
